# rouby-game

./: .gitignore  CMakeLists.txt  README.md
include/: Genetic.cpp  Genetic.h
src/game/: main.cpp
